# antonia-jurisbot

./: .gitignore  ATLAS_AUDITORIA_EJECUTADA.md  ATLAS_v3_PROMPT_MAESTRO.md  AUDITORIA_TOTAL_AntonIA_v3.md  LANZAR_ANTONIA.sh  PROMPT_AUDITORIA_ANTONIA.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml  trigger.txt
data/: biblioteca_manifest.json  biblioteca_manifest_v2.json  doctrina_index.json  indexed_hashes.json  jurisprudencia_reference.json
scripts/: index_biblioteca.py  indexar_doctrina_antonia.py  indexar_loop.sh  indexar_worker.py
src/jurisbot/: __init__.py  config.py  exceptions.py
src/jurisbot/ingestion/: __init__.py  chunker.py  detector.py  orchestrator.py
src/jurisbot/ingestion/extractors/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py
src/jurisbot/nlp/: __init__.py  classifier.py  llm_client.py
src/jurisbot/rag/: __init__.py  engine.py
src/jurisbot/study/: __init__.py  generator.py
streamlit_app/: abogado_module.py  academia_module.py  academia_module_v2.py  app  app.py  app_backup.py  banco_desarrollo.py  banco_desarrollo_extra.py  banco_preguntas.py  calculadora_plazos_module.py  casos_banco.py  casos_banco_extra.py  consulta_legal_module.py  doctrina_service.py  evaluaciones_banco.py  examen_simulado_module.py  jurisprudencia_service.py  profesor_module.py  theme.py
streamlit_app/utils/: llm_resilient.py
tests/: test_bancos.py
